<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <item
        android:id="@+id/infos_generales"
        android:icon="@+drawable/infos_g"
        android:showAsAction="ifRoom"
        android:title="@string/infos_generales"/>
    <item
        android:id="@+id/hospi_en_cours"
        android:icon="@+drawable/hospi_en_cours"
        android:showAsAction="ifRoom"
        android:title="@string/hospi_en_cours"/>
    <item
        android:id="@+id/archives"
        android:icon="@+drawable/archives"
        android:showAsAction="ifRoom"
        android:title="@string/archives"/>
    <item
        android:id="@+id/codification"
        android:icon="@+drawable/codification"
        android:showAsAction="ifRoom"
        android:title="@string/codification"/>

</menu>