<?xml version="1.0" encoding="utf-8"?>
<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:layout_margin="30dp"
    android:columnCount="5"
    android:useDefaultMargins="false" >
    
    <TextView
        android:id="@+id/tvTitreRadio"
        android:layout_column="0"
        android:layout_columnSpan="3"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="15sp"
        android:layout_row="0"
        android:text="@string/form_titre"
        android:textSize="32sp" />

    <TextView
        android:id="@+id/tvNom"
        android:layout_column="0"
        android:layout_gravity="right"
        android:layout_row="1"
        android:text="@string/form_nom_patient"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <EditText
        android:id="@+id/etNom"
        android:layout_column="1"
        android:layout_columnSpan="2"
        android:layout_row="1"
        android:ems="12"
        android:inputType="textPersonName" >
    </EditText>

    <TextView
        android:id="@+id/tvPrenom"
        android:layout_column="0"
        android:layout_gravity="right"
        android:layout_row="2"
        android:text="@string/form_prenom_patient"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <EditText
        android:id="@+id/etPrenom"
        android:layout_column="1"
        android:layout_columnSpan="2"
        android:layout_row="2"
        android:ems="12"
        android:inputType="textPersonName" />

    <TextView
        android:id="@+id/tvLieuNaissance"
        android:layout_column="0"
        android:layout_gravity="right"
        android:layout_row="3"
        android:text="@string/form_lieu_naissance"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <EditText
        android:id="@+id/etLieuNaissance"
        android:layout_column="1"
        android:layout_columnSpan="2"
        android:layout_row="3"
        android:ems="12"
        android:inputType="textPersonName" />

    <TextView
        android:id="@+id/tvDateNaissance"
        android:layout_width="wrap_content"
        android:layout_column="3"
        android:layout_gravity="center_horizontal"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="20dp"
        android:layout_row="3"
        android:text="@string/form_date_naissance"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <EditText
        android:id="@+id/etDateNaissance"
        android:layout_column="4"
        android:layout_gravity="center_horizontal|top"
        android:layout_row="3"
        android:ems="10"
        android:inputType="date" />

    <RadioButton
        android:id="@+id/rbSexeM"
        android:layout_column="4"
        android:layout_gravity="center_horizontal|top"
        android:layout_row="2"
        android:drawableRight="@drawable/male" />

    <RadioButton
        android:id="@+id/rbSexeF"
        android:layout_column="4"
        android:layout_gravity="center"
        android:layout_row="1"
        android:drawableRight="@drawable/female" />

 
</GridLayout>