<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginRight="16dp"
    android:orientation="vertical"
    android:paddingLeft="16dp"
    android:paddingRight="16dp"
    android:paddingTop="16dp" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/tv_titre"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:textAppearance="?android:attr/textAppearanceLarge" />
    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@android:color/black"
        android:paddingTop="16dp" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/activity_vertical_margin" >

        <TextView
            android:id="@+id/titre_cause"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="10dp"
            android:text="@string/titre_cause"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="#969696"
            android:textSize="22sp" />

        <View
            android:layout_width="300dp"
            android:layout_height="1dp"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/titre_cause"
            android:layout_marginRight="24dp"
            android:background="#969696"
            android:paddingTop="16dp" />

        <TextView
            android:id="@+id/textview_radio"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/titre_cause"
            android:layout_below="@+id/titre_cause"
            android:layout_marginTop="30dp"
            android:text="@string/form_radio"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textview_radio_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/textview_radio"
            android:layout_alignLeft="@+id/textview_radio_value"
            android:layout_toRightOf="@+id/textview_radio"
            android:layout_marginLeft="30dp"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <TextView
            android:id="@+id/textview_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignTop="@+id/textview_radio"
            android:layout_marginLeft="450dp"
            android:text="@string/form_date"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textview_date_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/textview_date"
            android:layout_marginLeft="600dp"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <TextView
            android:id="@+id/textview_cause"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/textview_radio"
            android:layout_below="@+id/textview_radio"
            android:layout_marginTop="16dp"
            android:text="@string/form_cause"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textview_cause_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/textview_cause"
            android:layout_alignLeft="@+id/textview_radio_value"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <TextView
            android:id="@+id/textview_medecin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignTop="@+id/textview_cause"
            android:layout_marginLeft="450dp"
            android:text="@string/form_medecin"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textview_medecin_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/textview_date_value"
            android:layout_alignBottom="@+id/textview_medecin"
            android:textAppearance="?android:attr/textAppearanceLarge" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/activity_vertical_margin" >

        <TextView
            android:id="@+id/titre_description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="10dp"
            android:text="@string/titre_description"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="#969696"
            android:textSize="22sp" />

        <View
            android:layout_width="300dp"
            android:layout_height="1dp"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/titre_description"
            android:layout_marginRight="24dp"
            android:background="#969696"
            android:paddingTop="16dp" />

        <TextView
            android:id="@+id/textview_description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/titre_description"
            android:layout_below="@+id/titre_description"
            android:layout_marginTop="30dp"
            android:text="@string/form_description"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textview_description_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/textview_description"
            android:layout_below="@+id/textview_description"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <TextView
            android:id="@+id/textview_interpretation"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/textview_description"
            android:layout_below="@+id/textview_description_value"
            android:layout_marginTop="50dp"
            android:text="@string/form_interpretation"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textview_interpretation_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/textview_interpretation"
            android:layout_below="@+id/textview_interpretation"
            android:textAppearance="?android:attr/textAppearanceLarge" />
    </RelativeLayout>

</LinearLayout>